remove chatGPT's non sense